--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ main {
    border: 3px solid rgb(38, 133, 221);
 }
 .result {
+   overflow: hidden;
    width: 100%;
    height: 50px;
    padding: 10px;
